@@ -16,7 +16,7 @@ def read(fname):
 
 setup(
     name='yandex_tracker_client',
-    version='1.2',
+    version='1.3',
     description='Client for Yandex.Tracker',
     author='Yandex Team',
     author_email='smosker@yandex-team.ru',
